# ai-engineering-final

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
FPL_csvs/: cleaned_players.csv
demoday/: __init__.py  column_name_getter_chain.py  few_shot_agent_prompt.py  human_as_a_tool.py  player_stats_data.py  query_samples.json  state_machine_agent.py  unstructured_data_chain.py
demoday/helper_scripts/: populate_player_names.py  populate_unstructured_vector_store.py
